# smart_weather

./: .env.example  .gitignore  INSTALL.md  Norwayectest.py  README.md  USER_GUIDE.md  advanced_forecast_service.py  agent_functions.py  agro_alert_engine.py  agro_calculator.py  app.py  chart_generator.py  check_charts.py  count_lines.py  crop_database.py  diagnose_grib.py  download_hangzhou_forecast.py  ecmwf_fixed_download.py  ecmwf_service.py  ecmwf_service1.py  farming_ai_adviser.py  fetch_meteostat_observed.py  fetch_noaa_isd.py  forecast_issue_time.py  forecast_visualizer.py  history_analyzer.py  ml_correction.py  ml_correction_v2.py  ml_features_v2.py  openmeteo_collector.py  openmeteo_collector1.py  openmeteo_service.py  pyproject.toml  quick_test.py  replacements.txt  replacements2.txt  replacements3.txt  requirements.txt  rp5_parser_final.py  rp5_parser_real.py  (+27 more)
.claude/: settings.json  settings.local.json
climate_data/: __init__.py  climatology_8110.py  climatology_9120.py  openmeteo_client.py
data/: hangzhou_observed_20260111_20260221.csv  hangzhou_observed_20260215_20260416.csv  hangzhou_observed_20260215_20260422.csv
data_parsers/: __init__.py  quick_test.py  rp5_parser.py
docs/: ml_bias_correction_v2_research_plan.md
history_test/: test.py
models/: config_precip_clf.json  config_precip_reg.json  config_rhum.json  config_temp.json  config_wspd.json  metrics_report.json  rf_precip_clf.pkl  rf_precip_reg.pkl  training_manifest.json
models_v2/: boost_precip_clf.pkl  boost_precip_reg.pkl  boost_rhum.pkl  boost_temp.pkl  boost_wspd.pkl  comparison_report_v1_v2.md  config_precip_clf.json  config_precip_reg.json  config_rhum.json  (+4 more)
(+537 files in other folders)
